--- a/css/scss/_testimonial.scss
+++ b/css/scss/_testimonial.scss
@@ -37,11 +37,12 @@
     &::after {
         position: absolute;
         content: "\f10d";
-        font-family: "fontawesome";
+        font-family: "Font Awesome 5 Free";
         left: 39px;
         top: 22%;
         font-size: 30px;
         color: $blue-3;
+        font-weight: 900;
     }
     &-2 {
         color: $white;
@@ -63,7 +64,8 @@
         &::before {
             position: absolute;
             content: "\f10d";
-            font-family: "fontawesome";
+            font-family: "Font Awesome 5 Free";
+            font-weight: 900;
             left: -40px;
             top: 0;
             font-size: 30px;
