--- a/css/scss/style.css
+++ b/css/scss/style.css
@@ -3214,7 +3214,10 @@ select {
 
   .postbox__title h3 a {
     font-size: 24px;
-    line-height: 34px; } }
+    line-height: 34px; }
+
+  .about__inner img {
+    width: 100%; } }
 @media (max-width: 575.98px) {
   .signle-slider h1 {
     font-size: 4rem; }
@@ -3303,6 +3306,9 @@ select {
 
   .postbox__title h3 a {
     font-size: 24px;
-    line-height: 34px; } }
+    line-height: 34px; }
+
+  .about__inner img {
+    width: 100%; } }
 
 /*# sourceMappingURL=style.css.map */
